--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ addons:
 script:
   #- cd /etc/hosts
   #- sudo wget https://raw.githubusercontent.com/mitchellkrogza/Badd-Boyz-Hosts/master/hosts && sudo mv hosts.1 hosts
-  - find / -name "hosts" &> /dev/stdout
+  - sudo find / -name "hosts" &> /dev/stdout
   - ls -la /home/travis/build/mitchellkrogza/ &> /dev/stdout
   - nslookup freelotto.com &> /dev/stdout
   #- cat /tmp/error.log
