--- a/.travis.yml
+++ b/.travis.yml
@@ -19,10 +19,11 @@ addons:
     packages:
       - realpath
 script:
-  #- cd /etc/hosts
-  #- sudo wget https://raw.githubusercontent.com/mitchellkrogza/Badd-Boyz-Hosts/master/hosts && sudo mv hosts.1 hosts
-  - sudo find / -name "hosts" &> /dev/stdout
-  - ls -la /home/travis/build/mitchellkrogza/ &> /dev/stdout
+  #- cd /etc
+  - sudo wget https://raw.githubusercontent.com/mitchellkrogza/Badd-Boyz-Hosts/master/hosts
+  - sudo mv hosts /etc/hosts
+  #- sudo find / -name "hosts" &> /dev/stdout
+  #- ls -la /home/travis/build/mitchellkrogza/ &> /dev/stdout
   - nslookup freelotto.com &> /dev/stdout
   #- cat /tmp/error.log
 #before_deploy:
