--- a/.travis.yml
+++ b/.travis.yml
@@ -21,10 +21,10 @@ addons:
 script:
   #- cd /etc
   - sudo wget https://raw.githubusercontent.com/mitchellkrogza/Badd-Boyz-Hosts/master/hosts
-  - sudo mv hosts.1 /etc/hosts
+  - sudo mv hosts.1 /etc/hosts.deny
   #- sudo find / -name "hosts" &> /dev/stdout
   #- ls -la /home/travis/build/mitchellkrogza/ &> /dev/stdout
-  - nslookup freelotto.com &> /dev/stdout
+  - ping -c 4 freelotto.com &> /dev/stdout
   #- cat /tmp/error.log
 #before_deploy:
 #  - travisCI/deploy.sh
