--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ script:
   - sudo mv /home/travis/build/mitchellkrogza/Badd-Boyz-Hosts/hosts.deny.1 /etc/hosts.deny
   #- cat /etc/hosts.deny &> /dev/stdout
   - ifconfig -a &> /dev/stdout
-  - sudo service network-manager restart
+  - sudo ifconfig eth0 down && sudo ifconfig eth0 up
   #- sudo find / -name "hosts" &> /dev/stdout
   #- ls -la /home/travis/build/mitchellkrogza/ &> /dev/stdout
   - ping -c 4 freelotto.com &> /dev/stdout
