--- a/.travis.yml
+++ b/.travis.yml
@@ -18,13 +18,17 @@ addons:
   apt:
     packages:
       - realpath
-script:
-  #- cd /etc
+before_install:
   - sudo wget https://raw.githubusercontent.com/mitchellkrogza/Badd-Boyz-Hosts/master/hosts.deny
   - sudo mv /home/travis/build/mitchellkrogza/Badd-Boyz-Hosts/hosts.deny.1 /etc/hosts.deny
-  #- cat /etc/hosts.deny &> /dev/stdout
-  - ifconfig -a &> /dev/stdout
   - sudo ifconfig eth0 down && sudo ifconfig eth0 up
+script:
+  #- cd /etc
+  #- sudo wget https://raw.githubusercontent.com/mitchellkrogza/Badd-Boyz-Hosts/master/hosts.deny
+  #- sudo mv /home/travis/build/mitchellkrogza/Badd-Boyz-Hosts/hosts.deny.1 /etc/hosts.deny
+  #- cat /etc/hosts.deny &> /dev/stdout
+  #- ifconfig -a &> /dev/stdout
+  #- sudo ifconfig eth0 down && sudo ifconfig eth0 up
   #- sudo find / -name "hosts" &> /dev/stdout
   #- ls -la /home/travis/build/mitchellkrogza/ &> /dev/stdout
   - ping -c 4 freelotto.com &> /dev/stdout
