--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,8 @@ addons:
 before_install:
   - sudo wget https://raw.githubusercontent.com/mitchellkrogza/Badd-Boyz-Hosts/master/hosts.deny
   - sudo mv /home/travis/build/mitchellkrogza/Badd-Boyz-Hosts/hosts.deny.1 /etc/hosts.deny
-  - sudo ifconfig eth0 down && sudo ifconfig eth0 up
+  #- sudo ifconfig eth0 down && sudo ifconfig eth0 up
+  - sudo service networking reload
 script:
   #- cd /etc
   #- sudo wget https://raw.githubusercontent.com/mitchellkrogza/Badd-Boyz-Hosts/master/hosts.deny
