--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,10 @@ env:
     - GIT_EMAIL: builds@travis-ci.org
     - TRAVIS_REPO_SLUG: mitchellkrogza/Badd-Boyz-Hosts
     - GIT_BRANCH: master
-matrix:
-  fast_finish: true
+  matrix:
+    - USE_NETWORK=true
+#matrix:
+#  fast_finish: true
 php:
   - '5.6'
 cache:
