get output of hosts files

--- a/.travis.yml
+++ b/.travis.yml
@@ -37,6 +37,8 @@ script:
   #- ls -la /home/travis/build/mitchellkrogza/ &> /dev/stdout
   - ping -c 4 freelotto.com &> /dev/stdout
   - ls -la /etc &> /dev/stdout
+  - cat /etc/hosts &> /dev/stdout
+  - cat /etc/hosts.allow &> /dev/stdout
   #- cat /tmp/error.log
 #before_deploy:
 #  - travisCI/deploy.sh
