--- a/.travis.yml
+++ b/.travis.yml
@@ -20,27 +20,22 @@ addons:
   apt:
     packages:
       - realpath
-before_install:
-  - sudo wget https://raw.githubusercontent.com/mitchellkrogza/Badd-Boyz-Hosts/master/hosts.allow
-  - sudo mv /home/travis/build/mitchellkrogza/Badd-Boyz-Hosts/hosts.allow.1 /etc/hosts.allow
-  - sudo wget https://raw.githubusercontent.com/mitchellkrogza/Badd-Boyz-Hosts/master/hosts.deny
-  - sudo mv /home/travis/build/mitchellkrogza/Badd-Boyz-Hosts/hosts.deny.1 /etc/hosts.deny
-  #- sudo ifconfig eth0 down && sudo ifconfig eth0 up
-  #- sudo service networking restart
-  #- sudo service --status-all &> /dev/stdout
 script:
-  #- cd /etc
+  - sudo wget https://github.com/mitchellkrogza/Badd-Boyz-Hosts/raw/master/hosts
+  - sudo mv /etc/hosts /etc/hosts.bak2
+  - sudo cp hosts.1 /etc/hosts
+  #- sudo wget https://raw.githubusercontent.com/mitchellkrogza/Badd-Boyz-Hosts/master/hosts.allow
+  #- sudo mv /home/travis/build/mitchellkrogza/Badd-Boyz-Hosts/hosts.allow.1 /etc/hosts.allow
   #- sudo wget https://raw.githubusercontent.com/mitchellkrogza/Badd-Boyz-Hosts/master/hosts.deny
   #- sudo mv /home/travis/build/mitchellkrogza/Badd-Boyz-Hosts/hosts.deny.1 /etc/hosts.deny
-  #- cat /etc/hosts.deny &> /dev/stdout
   #- ifconfig -a &> /dev/stdout
   #- sudo ifconfig eth0 down && sudo ifconfig eth0 up
   #- sudo find / -name "hosts" &> /dev/stdout
   #- ls -la /home/travis/build/mitchellkrogza/ &> /dev/stdout
-  - ping -c 4 freelotto.com &> /dev/stdout
-  - ls -la /etc &> /dev/stdout
-  - cat /etc/hosts &> /dev/stdout
-  - cat /etc/hosts.allow &> /dev/stdout
+  - ping -c 4 000free.us &> /dev/stdout
+  #- ls -la /etc &> /dev/stdout
+  #- cat /etc/hosts &> /dev/stdout
+  #- cat /etc/hosts.allow &> /dev/stdout
   #- cat /tmp/error.log
 #before_deploy:
 #  - travisCI/deploy.sh
