Fixes to Travis CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,9 +23,9 @@ before_install:
   - export TZ=Africa/Johannesburg
 
 script:
-  - sudo wget https://github.com/mitchellkrogza/Badd-Boyz-Hosts/raw/master/hosts
+  - sudo wget https://github.com/mitchellkrogza/Badd-Boyz-Hosts/raw/master/hosts -O /tmp/hosts
   - sudo mv /etc/hosts /etc/hosts.bak2
-  - sudo cp hosts.1 /etc/hosts
+  - sudo cp /tmp/hosts /etc/hosts
   - ping -c 4 000free.us &> /dev/stdout
   - ping -c 4 fix-website-errors.com &> /dev/stdout
   - ping -c 4 get-seo-domain.com &> /dev/stdout
