--- a/.travis.yml
+++ b/.travis.yml
@@ -23,9 +23,10 @@ before_install:
   - export TZ=Africa/Johannesburg
 
 script:
-  - sudo wget https://github.com/mitchellkrogza/Badd-Boyz-Hosts/raw/master/hosts -O /tmp/hosts
-  - sudo mv /etc/hosts /etc/hosts.bak2
-  - sudo cp /tmp/hosts /etc/hosts
+  - sudo travisCI/generate-hosts
+  #- sudo wget https://github.com/mitchellkrogza/Badd-Boyz-Hosts/raw/master/hosts -O /tmp/hosts
+  #- sudo mv /etc/hosts /etc/hosts.bak2
+  #- sudo cp /tmp/hosts /etc/hosts
   - ping -c 4 000free.us &> /dev/stdout
   - ping -c 4 fix-website-errors.com &> /dev/stdout
   - ping -c 4 get-seo-domain.com &> /dev/stdout
