--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,7 @@ script:
   - ping -c 4 olympescort.com &> /dev/stdout
   - ping -c 4 zx6.ru &> /dev/stdout
   - STATUSCODE=$(ping -c 4 zx6.ru &> /dev/stderr) | if test $STATUSCODE 127.0.0.1; then exit 0; fi
+  - STATUSCODE=$(ping -c 4 zx6.ru &> /dev/stderr) | if test $STATUSCODE hello; then exit 0; fi
 
 before_deploy:
   - travisCI/deploy-package.sh
