--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,3 @@
-language: php
 sudo: required
 dist: trusty
 env:
@@ -21,14 +20,18 @@ addons:
 
 before_install:
   - export TZ=Africa/Johannesburg
+  - sudo apt-get -y install expect
+  - sudo apt-get -y install whois
+  - sudo apt-get -y install dos2unix
 
 script:
-  - travisCI/generate-hosts.sh
-  - travisCI/modify-files-and-commit.sh
-  - travisCI/ping-test.sh
+  - bash .dev-tools/generate-hosts.sh
+  - bash .dev-tools/run_funceble.sh
+  - bash .dev-tools/modify-files-and-commit.sh
+  #- travisCI/ping-test.sh
 
 before_deploy:
-  - travisCI/deploy-package.sh
+  - .dev-tools/deploy-package.sh
 
 deploy:
   provider: releases
