--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ before_install:
 
 script:
   - bash .dev-tools/generate-hosts.sh
-  - bash .dev-tools/run-funceble.sh
+  #- bash .dev-tools/run-funceble.sh
   - bash .dev-tools/modify-files-and-commit.sh
   #- travisCI/ping-test.sh
 
