--- a/.travis.yml
+++ b/.travis.yml
@@ -33,22 +33,22 @@ script:
 before_deploy:
   - .dev-tools/deploy-package.sh
 
-deploy:
-  provider: releases
-  api_key:
-    secure: ${GH_TOKEN}
-  file:
-  - "hosts"
-  skip_cleanup: true
-  on:
-    repo: mitchellkrogza/Badd-Boyz-Hosts
-    tags: false
-    branches:
-      except:
-        - "/^v[0-9]/"
-        - "/^V.*$/"
-    branches:
-       only:
-         - "master"
-notifications:
-  email: false
+#deploy:
+#  provider: releases
+#  api_key:
+#    secure: ${GH_TOKEN}
+#  file:
+#  - "hosts"
+#  skip_cleanup: true
+#  on:
+#    repo: mitchellkrogza/Badd-Boyz-Hosts
+#    tags: false
+#    branches:
+#      except:
+#        - "/^v[0-9]/"
+#        - "/^V.*$/"
+#    branches:
+#       only:
+#         - "master"
+#notifications:
+#  email: false
