--- a/.travis.yml
+++ b/.travis.yml
@@ -29,9 +29,10 @@ script:
   #- bash .dev-tools/run-funceble.sh
   - bash .dev-tools/modify-files-and-commit.sh
   #- travisCI/ping-test.sh
-
-before_deploy:
   - .dev-tools/deploy-package.sh
+
+#before_deploy:
+#  - .dev-tools/deploy-package.sh
 
 #deploy:
 #  provider: releases
