--- a/.travis.yml
+++ b/.travis.yml
@@ -29,27 +29,27 @@ script:
   #- bash .dev-tools/run-funceble.sh
   - bash .dev-tools/modify-files-and-commit.sh
   #- travisCI/ping-test.sh
+  #- .dev-tools/deploy-package.sh
+
+before_deploy:
   - .dev-tools/deploy-package.sh
 
-#before_deploy:
-#  - .dev-tools/deploy-package.sh
-
-#deploy:
-#  provider: releases
-#  api_key:
-#    secure: ${GH_TOKEN}
-#  file:
-#  - "hosts"
-#  skip_cleanup: true
-#  on:
-#    repo: mitchellkrogza/Badd-Boyz-Hosts
-#    tags: false
-#    branches:
-#      except:
-#        - "/^v[0-9]/"
-#        - "/^V.*$/"
-#    branches:
-#       only:
-#         - "master"
-#notifications:
-#  email: false
+deploy:
+  provider: releases
+  api_key:
+    secure: ${GH_TOKEN}
+  file:
+  - "hosts"
+  skip_cleanup: true
+  on:
+    repo: mitchellkrogza/Badd-Boyz-Hosts
+    tags: false
+    branches:
+      except:
+        - "/^v[0-9]/"
+        - "/^V.*$/"
+    branches:
+       only:
+         - "master"
+notifications:
+  email: false
