Update of travis.yml in order to push into dev and not master :)
Consider this branch as a global test of the introduction of PyFunceble


Former-commit-id: b11d83bcb914d98acff19e8efa40bd898839eeab

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ env:
     - GIT_NAME: Travis CI
     - GIT_EMAIL: mitchellkrog@gmail.com
     - TRAVIS_REPO_SLUG: mitchellkrogza/Badd-Boyz-Hosts
-    - GIT_BRANCH: master
+    - GIT_BRANCH: dev
   matrix:
     - USE_NETWORK=true
 php:
