--- a/.travis.yml
+++ b/.travis.yml
@@ -9,17 +9,19 @@ env:
     - GIT_BRANCH: dev
   matrix:
     - USE_NETWORK=true
-php:
-  - '5.6'
+language: python
+
+python:
+  - "3.6"
+
 cache:
   - apt
 
 before_install:
   - export TZ=Africa/Johannesburg
-  - sudo apt-get -y install expect
-  - sudo apt-get -y install whois
+  - sudo apt-get -y install python3-pip
   - sudo apt-get -y install dos2unix
-  - sudo apt-get -y install realpath
+  - pip3 install colorama
 
 script:
   - bash .dev-tools/pre-deploy.sh
