--- a/.travis.yml
+++ b/.travis.yml
@@ -9,24 +9,29 @@ env:
     - GIT_BRANCH: dev
   matrix:
     - USE_NETWORK=true
+
 language: python
 
 python:
   - "3.6"
 
+matrix:
+  fast_finish: true
+
 cache:
   - apt
   - pip
 
+sudo: required
+
 before_install:
   - export TZ=Africa/Johannesburg
-  - sudo apt-get -y install python3-pip
+  - sudo apt-get -y install python3-pip python3-yaml
   - sudo apt-get -y install dos2unix
   - pip3 install colorama
 
 script:
   - bash .dev-tools/pre-deploy.sh
-  #- bash .dev-tools/deploy.sh
 
 notifications:
   email: false
