--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,8 @@ install:
   - pip3 install ultimate-hosts-blacklist-whitelist
 
 script:
-  - bash .dev-tools/pre-deploy.sh
+  # We put both in same statement so that if one fails the whole test result will fail.
+  - bash .dev-tools/pre-deploy.sh && bash .dev-tools/run-PyFunceble.sh
 
 notifications:
   on_success: never
