--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ env:
     - TRAVIS_REPO_SLUG: mitchellkrogza/Badd-Boyz-Hosts
     - GIT_BRANCH: master
     - TZ:       Africa/Johannesburg
-    - PYFUNCEBLE_AUTO_CONFIGURATION: PyFunceble
+    - PYFUNCEBLE_CONFIG_DIR: dev-tools/
 
 language: python
 
