--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ env:
     - GIT_BRANCH: master
     - TZ:       Africa/Johannesburg
     - PYFUNCEBLE_CONFIG_DIR: dev-tools/
+    - PYFUNCEBLE_AUTO_CONFIGURATION: PyFunceble
 
 language: python
 
