--- a/.github/config.yml
+++ b/.github/config.yml
@@ -60,5 +60,5 @@ requestInfoOn:
 # *OPTIONAL* Add a list of people whose Issues/PRs will not be commented on
 # keys must be GitHub usernames
 requestInfoUserstoExclude:
-  - mitchellkrog
+  #- mitchellkrog
   - funilrys
