Say Hello to Sentiment Bot [ci skip]

--- a/.github/config.yml
+++ b/.github/config.yml
@@ -71,4 +71,4 @@ sentimentBotToxicityThreshold: .7
 
 # *Required* Comment to reply with
 sentimentBotReplyComment: >
-  Your comment seemed to go against our community code of conduct and ethics. Please be respectful of other users. cc/ @mitchellkrog @funilrys
+  Your comment seemed to go against our community code of conduct and ethics. Please be respectful of other users. cc/ @mitchellkrog cc/ @funilrys
