--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ sudo: required
 
 install:
   - pip3 install --upgrade pip
-  - pip3 install PyFunceble-dev
+  - pip3 install PyFunceble
   - pip3 install ultimate-hosts-blacklist-whitelist
 
 script:
